--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -1374,10 +1374,10 @@
         <image name="american-flag-large.jpg" width="1200" height="632"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="qMz-Bs-jkl"/>
-        <segue reference="u9s-wb-zky"/>
         <segue reference="MV4-FB-rst"/>
-        <segue reference="EP5-8c-nbc"/>
+        <segue reference="u9s-wb-zky"/>
+        <segue reference="XXS-CM-y08"/>
         <segue reference="xyj-au-Pqm"/>
+        <segue reference="EP5-8c-nbc"/>
     </inferredMetricsTieBreakers>
 </document>
